=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Merged: Merge changes r64502 - r6528 from the trunk. (windmillway)
 - Added sidebar and some sidebar modules (yalnifj)
 - Merged: Merge changes r6477 - r6501 from the trunk. (windmillway)
 - Changed: Minor changes to prevent addition of none entered tags (e.g. OBJE) when entry fields are empty. (windmillway)
 - Changed: GEDFact Census assistant now copies a Census event to all affected Indi's in the shared note created. (windmillway)
 - Merged: Merge changes r6431 - r6476 from the trunk.  
   Also added SOUR and OBJE fields to GEDFact assistant window. 
   Still have to link these fields ... patience please (windmillway)
 - Changed: Copy Census event to multi indis now working (GEDFact_assistant/_CENS) (windmillway)
 - Merged: Merge changes r6416 - r6430 from the trunk. (windmillway)
 - Add new file modules/GEDFact_assistant/_CENS/gedrec_append.php to handle census event copying to multiple indis. (Requires Trunk svn 6430) (windmillway)
 - Merged: Merge changes r6394 - r6415 from the trunk. Changed placement of CENS assistant launch icon on "CENS add" window. (windmillway)
 - Merged: Merge changes r6325 - r6393 from the trunk. (windmillway)
 - Changed: All theme Tab spacing/padding now narrowed. Selected Tab height changed. ALL tabs now wrap gracefully.
 - Re-added the Tab page content "shift", and fixed the "grey" background, when Navigator pinned. (windmillway)
 - Removed Tab page content "shift" to left when pinning Navigator (windmillway)
 - "Narrowed" Tab spacing, and Tab title padding, on themes simplygreen, xenea, and wood (windmillway)
 - Made static tab "pinnable" (yalnifj)